--- a/app/src/main/res/layout/activity_available_appointments.xml
+++ b/app/src/main/res/layout/activity_available_appointments.xml
@@ -20,8 +20,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/consultationTypeSpinner"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.616"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.428" />
 
     <Spinner
         android:id="@+id/consultationTypeSpinner"
@@ -55,7 +57,7 @@
     <!-- Back Button -->
     <Button
         android:id="@+id/backButton"
-        android:layout_width="78dp"
+        android:layout_width="89dp"
         android:layout_height="40dp"
         android:layout_marginTop="4dp"
         android:text="Back"
